<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/card_view"
	android:layout_gravity="center"
	android:layout_width="@dimen/picture_item_width"
	android:layout_height="match_parent"
	android:gravity="center"
	android:orientation="vertical">

	<TextView
		android:id="@+id/errorItem_title"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:gravity="center"
		android:text="@string/error_title"
		android:textColor="@color/black"
		android:textSize="20sp"
		android:singleLine="false"/>

	<android.support.v4.widget.Space
		android:layout_width="wrap_content"
		android:layout_height="8dp"/>

	<TextView
		android:id="@+id/errorItem_description"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingLeft="32dp"
		android:paddingRight="32dp"
		android:layout_gravity="center"
		android:gravity="center"
		android:text="@string/error_description"
		android:textColor="@color/black"
		android:textSize="15sp"
		android:singleLine="false"/>

	<android.support.v4.widget.Space
		android:layout_width="wrap_content"
		android:layout_height="24dp"/>

	<TextView
		android:id="@+id/errorItem_tryAgain"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:paddingTop="12dp"
		android:paddingBottom="12dp"
		android:paddingLeft="32dp"
		android:paddingRight="32dp"
		android:background="@drawable/bg_button"
		android:foreground="?selectableItemBackground"
		android:gravity="center"
		android:text="@string/error_try_again"
		android:textColor="@color/white"
		android:textSize="14sp" />

</LinearLayout>