<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<android.support.v7.widget.Toolbar
		android:id="@+id/main_toolbar"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:background="@color/colorPrimary"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/white"
			android:text="@string/app_name"/>
		
		<ImageView
			android:id="@+id/main_filterIcon"
			android:layout_width="24dp"
			android:layout_height="24dp"
			android:layout_gravity="right|center_vertical"
			android:layout_marginRight="16dp"
			android:src="@drawable/ic_filter"/>

	</android.support.v7.widget.Toolbar>

	<fragment
		android:id="@+id/fragment"
		android:name="com.sumera.argallery.ui.feature.picturelist.PictureListFragment"
		android:layout_width="0dp"
		android:layout_height="0dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/main_tabs"/>

	<android.support.design.widget.TabLayout
		android:id="@+id/main_tabs"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/main_toolbar">

		<android.support.design.widget.TabItem
			android:id="@+id/main_allTab"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/main_all_tab"/>

		<android.support.design.widget.TabItem
			android:id="@+id/main_favouriteTab"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/main_favourites_tab"/>

	</android.support.design.widget.TabLayout>


	<FrameLayout
		android:id="@+id/main_filterTabContainer"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"/>
</android.support.constraint.ConstraintLayout>